objects/Account.object
<CustomObject>
    <fields>
        <fullName>RotationRADU__c</fullName>
        <description>Target for deletion; The Rotation correlates to the sales person's rotation within a Zone for RADU</description>
        <inlineHelpText>The Rotation correlates to the sales person's rotation within a Zone</inlineHelpText>
        <label>Rotation RADU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RotationRCDU__c</fullName>
        <description>Target for deletion; The Rotation correlates to the sales person's rotation within a Zone for RCDU</description>
        <label>Rotation RCDU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowOnReport__c</fullName>
        <description>Used on reports to filter out data with no purchases, redemptions, or current AUM</description>
        <formula>(NatixisYTDPurchases__c + NatixisYTDRedemptions__c + NatixisPYPurchases__c + NatixisPYRedemptions__c +  NatixisPPYPurchases__c  +  NatixisPPYRedemptions__c +  NatixisAUM__c ) &lt;&gt;0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The MARS status of the account, Data Flow: Mars -&gt; SF</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suitability_Affirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The institutional account has affirmatively attested that it is evaluating investment risks independently and exercising independent judgement in evaluating member/associated person recommendations.</description>
        <inlineHelpText>The institutional account has affirmatively attested that it is evaluating investment risks independently and exercising independent judgement in evaluating member/associated person recommendations.</inlineHelpText>
        <label>Suitability Affirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TableauDashboardProfile__c</fullName>
        <description>Sourced from EDW; indicates which profile dashboard should be displayed for this account.</description>
        <label>Tableau Dashboard Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetMet__c</fullName>
        <description>Target for deletion; True if number of calls, number of emails, and number of meetings for the Quarter have been met.</description>
        <formula>if(  (YTDNumberofCalls__c + YTDNumberEmailContacts__c + YTDNumberOfMeetings__c) &gt;= QTDActvityTarget__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QTD Activities Target Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territories__c</fullName>
        <description>Roll-up summary of all account territories; used for reporting.</description>
        <externalId>true</externalId>
        <label>Territories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TierADU_IDU__c</fullName>
        <description>Target for delete; Used to Tier Advisor &amp; Institutional Distribution Unit data.</description>
        <inlineHelpText>Used to Tier Advisor &amp; Institutional Distribution Unit data. Tier is typically a quality designation and can correlate to how often an office should be contacted.</inlineHelpText>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierFS__c</fullName>
        <description>Target for delete; Populated with a 1 time job for Jim Roach and used in the Firm Client Tiering Call Report.</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>DNC</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierRADU__c</fullName>
        <description>Target for deletion; Tier to support the Retirement Advisory Development unit</description>
        <label>Tier RADU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TierRCDU__c</fullName>
        <description>Target for deletion; To Support the Research and Consulting Development Unit's Tiers</description>
        <label>Tier RCDU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Target for deletion; Evaluates all tier fields in a hierarchy to determine the "primary" tier</description>
        <formula>CASE( $User.ActivityChannelName__c , 
'ADU', TEXT(TierADU_IDU__c ), 
'IDU', TEXT(TierADU_IDU__c ), 
'FIDUCIARY SERVICES', Text( TierFS__c ) ,  
'No Tier')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier Aggregated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranCurrentAUM__c</fullName>
        <description>Current Natixis AUM, Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <inlineHelpText>Natixis AUM</inlineHelpText>
        <label>Current AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TranPYAUM__c</fullName>
        <description>Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <label>PY AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TranPYPurchases__c</fullName>
        <description>Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <label>PY Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TranPYRedemptions__c</fullName>
        <description>Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <label>PY Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TranPriorPYPurchases__c</fullName>
        <description>Prior Previous Purchases, Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <label>Prior PY Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TranPriorPYRedemptions__c</fullName>
        <description>Prior PY Redemptions, Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <label>Prior PY Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TranYTDPurchases__c</fullName>
        <description>Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <inlineHelpText>Natixis YTD Purchases</inlineHelpText>
        <label>YTD Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TranYTDRedemptions__c</fullName>
        <description>Mars Integration field, Data Flow: Mars -&gt; SF</description>
        <inlineHelpText>Natixis Redemptions</inlineHelpText>
        <label>YTD Redemptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UserModifiedOffshore__c</fullName>
        <description>Used in the Global Connect integration. Populated based on Workflow when a user has been modified by the integration.</description>
        <label>User Modified Offshore</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WCMRelationshipFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maintained by loading firms identified by Data Ops, the data is not integrated. This field is used in formulas at the office and contact level and indicates that the related advisers should not have WCM products discussed with them or related material emailed to them.</description>
        <label>WCM Relationship Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XContactZone__c</fullName>
        <description>Target for deletion; refers to the primary contact's ADU IDU Zone</description>
        <formula>PrimaryOfficeContact__r.ZoneADU_IDU__r.Zone_ID_18__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XContactZone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTDETFPurchases__c</fullName>
        <description>DELETE.</description>
        <inlineHelpText>DELETE</inlineHelpText>
        <label>YTD ETF Purchases_OLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDMAPurchases__c</fullName>
        <label>YTD MA Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDMARedemptions__c</fullName>
        <label>YTD MA Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDMFPurchases__c</fullName>
        <label>YTD MF Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDMFRedemptions__c</fullName>
        <label>YTD MF Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDNumberEmailContacts__c</fullName>
        <description>YTD count of activities with Type = Email-Contact based on the activity contact table. Populated by a declarative lookup.</description>
        <label>YTD Number of Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDNumberOfActivities__c</fullName>
        <description>Sum of the YTD number of calls, emails, and meetings</description>
        <formula>YTDNumberofCalls__c + YTDNumberEmailContacts__c +  YTDNumberOfMeetings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDNumberOfMeetings__c</fullName>
        <description>YTD count of activities with Type = Meeting Group &amp; Meeting One on One based on the Activity Contact table. Populated by a declarative lookup</description>
        <label>YTD Number of Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDNumberofCalls__c</fullName>
        <description>YTD count of activities with Type = Call – Informative &amp; Call – Substantive based on the Activity Contact table</description>
        <label>YTD Number of Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDPRCGRequests__c</fullName>
        <description>Auto populated based on the number of activities of type Analytics for the current year.</description>
        <inlineHelpText>Auto populated based on the number of activities of type Analytics for the current year.</inlineHelpText>
        <label>YTD PRCG Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDPurchasesETF__c</fullName>
        <description>Integrated on a monthly basis from the Data Warehouse.</description>
        <inlineHelpText>This value displays only ETF related data and is updated on a monthly basis.  ETF data is not displayed in Sales by Product or the Big Tickets reports or the related YTD Purchases ETF.</inlineHelpText>
        <label>YTD Purchases ETF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTDRedemptionsETF__c</fullName>
        <description>Integrated on a monthly basis from the Data Warehouse.</description>
        <inlineHelpText>This value displays only ETF related data and is updated on a monthly basis.  ETF data is not displayed in Sales by Product or the Big Tickets reports or the related YTD Redemptions ETF.</inlineHelpText>
        <label>YTD Redemptions ETF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Purchases_Formula_with_Label__c</fullName>
        <description>Target for deletion; presents YTD Purchases in the thousands, millions, or billions</description>
        <formula>"YTD Purchases: " &amp;

SUBSTITUTE(
IF(TranYTDPurchases__c&lt; 0, "(", "") &amp; "$" &amp;
IF(ABS(TranYTDPurchases__c) &gt;= 1000000000, TEXT(FLOOR(TranYTDPurchases__c/ 1000000000)) &amp; ",", "")
&amp; IF(ABS(TranYTDPurchases__c) &gt;= 1000000, RIGHT(TEXT(FLOOR(TranYTDPurchases__c/ 1000000)), 3) &amp; ",", "")
&amp; IF(ABS(TranYTDPurchases__c) &gt;= 1000, RIGHT(TEXT(FLOOR(TranYTDPurchases__c / 1000)), 3) &amp; ",", "")
&amp; RIGHT(TEXT(FLOOR(TranYTDPurchases__c)), 3)
&amp; RIGHT(TEXT(ROUND(TranYTDPurchases__c* 100, 0)), 0)
 &amp; IF(TranYTDPurchases__c &lt; 0, ")", "")
,"-","")</formula>
        <label>YTD Purchases Leveled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZeroActivity__c</fullName>
        <description>True if there have been no calls, emails, or meetings this year</description>
        <formula>if( YTDNumberofCalls__c + YTDNumberEmailContacts__c + YTDNumberOfMeetings__c = 0 ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Activities YTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZoneADU_IDU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target for deletion; Zone field for the Advisor &amp; Institutional Distribution Unit</description>
        <inlineHelpText>Updating the Office level Zone will automatically update all related Contact/Reps records with the same Zone.</inlineHelpText>
        <label>Zone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Zone__c.Zone__c</field>
                <operation>greaterOrEqual</operation>
                <value>7</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Accounts (Zone ADU_IDU)</relationshipLabel>
        <relationshipName>ZoneADU_IDU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZoneFS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target for deletion; Account Zone lookup for Fiduciary Services.</description>
        <label>Zone FS</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZoneIAG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target for deletion; IAG Zone for account</description>
        <label>Zone IAG</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Accounts (Zone IAG)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZoneRADU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target for deletion; Zone for RADU</description>
        <label>Zone RADU</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Accounts (Zone RADU)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZoneRCDU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Zone for RCDU</description>
        <label>Zone RCDU</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Zone__c.Zone__c</field>
                <operation>greaterOrEqual</operation>
                <value>7</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Accounts (Zone RCDU)</relationshipLabel>
        <relationshipName>ZoneRCDU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZoneWHSE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target for deletion; Zone for Wirehouse</description>
        <label>Zone WHSE</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Accounts (Zone WHSE)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Target for deletion; Original Zone field that aggregated data for FS but will become moot</description>
        <formula>CASE( $User.ActivityChannelName__c , 
'ADU', ZoneADU_IDU__r.Name, 
'IDU', ZoneADU_IDU__r.Name, 
'RCDU', ZoneRCDU__r.Name, 
'RADU', ZoneRADU__r.Name, 
'FIDUCIARY SERVICES', ZoneFS__r.Name , 
'DC REGIONAL', ZoneRADU__r.Name , 
'DCIO', ZoneRADU__r.Name , 
'DCIO SUB ADV', ZoneRADU__r.Name , 
'No Zone')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone Aggregated</label>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Affiliates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Affiliate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Affiliates</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FirmType__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>NatixisAUM__c</columns>
        <columns>NatixisYTDPurchases__c</columns>
        <columns>NatixisYTDRedemptions__c</columns>
        <columns>NatixisPYPurchases__c</columns>
        <columns>NatixisPYRedemptions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Account.Affiliate,Account.Consultant</value>
        </filters>
        <label>Firms/Offices</label>
    </listViews>
    <listViews>
        <fullName>Consultants</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>LastCallMeetingDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filters>
        <label>Consultants</label>
        <sharedTo>
            <roleAndSubordinates>a022A00000WVtGmQAL</roleAndSubordinates>
            <roleAndSubordinates>a022A00000WVtKeQAL</roleAndSubordinates>
            <roleAndSubordinates>a02F000000VK7RoIAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ConsultantsF</fullName>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>LastCallMeetingDate__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>FirmType__c</columns>
        <columns>MarsAccountId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Consultant</value>
        </filters>
        <label>Consultants - Firm level</label>
        <sharedTo>
            <roleAndSubordinates>a022A00000WVtGmQAL</roleAndSubordinates>
            <roleAndSubordinates>a022A00000WVtKeQAL</roleAndSubordinates>
            <roleAndSubordinates>a02F000000VK7RoIAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copy_of_Offices</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FirmType__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>NatixisAUM__c</columns>
        <columns>NatixisYTDPurchases__c</columns>
        <columns>NatixisYTDRedemptions__c</columns>
        <columns>NatixisPYPurchases__c</columns>
        <columns>NatixisPYRedemptions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Office</value>
        </filters>
        <label>Offices</label>
    </listViews>
    <listViews>
        <fullName>Firm_Client_Tiering_Report</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Channel__c</columns>
        <columns>Tier__c</columns>
        <columns>Zone__c</columns>
        <columns>TargetMet__c</columns>
        <columns>ZeroActivity__c</columns>
        <columns>TranYTDPurchases__c</columns>
        <columns>TranPYPurchases__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>LastCallMeetingDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tier__c</field>
            <operation>contains</operation>
            <value>1,2,3</value>
        </filters>
        <label>Firm Client Tiering Report</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Firm_IDU</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>PlanType__c</columns>
        <columns>InstitutionalPlanName__c</columns>
        <columns>FirmAUM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Firm</value>
        </filters>
        <label>Firms - IDU</label>
        <sharedTo>
            <role>a02F000000VK7RoIAL</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Firms</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>NatixisAUM__c</columns>
        <columns>NatixisYTDPurchases__c</columns>
        <columns>NatixisYTDRedemptions__c</columns>
        <columns>NatixisPYPurchases__c</columns>
        <columns>NatixisPYRedemptions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Firm</value>
        </filters>
        <label>Firms</label>
        <sharedTo>
            <roleAndSubordinates>a02F000000DHHopIAH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Focus_Firm_IAG</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FocusFirmIAG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>AXA</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>CETERA</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>COMMONWEALTH</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>LPL</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>RAYMOND</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Firm</value>
        </filters>
        <label>Focus Firm IAG</label>
        <sharedTo />
    </listViews>
    <listViews>
        <fullName>Focus_Firm_RS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FocusFirmIAG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FocusFirmRS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Focus Firm RS</label>
        <sharedTo />
    </listViews>
</CustomObject>